# alembic

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  models.md  pyproject.toml  requirements.txt
config/: connectors.yaml  trading.yaml  workers.yaml
data/: sp500_tickers.csv
docs/: API.md  ARCHITECTURE.md  EXTERNAL-REVIEW-INSTRUCTIONS.md  FIX_SUMMARY.md  GDELT-REVIEW-CONSOLIDATED.md  LLM Trading System Integration.docx  MULTIMODEL-REVIEW-RESPONSE.md  P0-FIX-SUMMARY.md  REVIEW-PROMPT.md  analisi-architetturaleglm-5_1.md  architecture-review-qwen3_5.md  architecture_reviewkimi-k2_6.md  multi-model-architecture-review.md  news-api-evaluation-2026.md
docs/claude-memory/: MEMORY.md  README.md  project_multiasset_brainstorm.md  project_pending_reviews.md  project_trading_system.md
docs/multimodel-prompts/: 00-coordinator-multimodel.md  01-dkcot-prompt-engineering.md  (+9 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json
migrations/: 001_initial.sql  002_add_weight_update_log.sql  003_extend_source_check.sql  004_add_ticker_lookup.sql  005_add_backtest_signals.sql  006_add_news_log.sql  007_add_llm_responses.sql
quantconnect/: __init__.py  intraday_strategy.py  lean.json  signal_data.py
scripts/: ensemble.py  gdelt_ab_test.py  migrate_add_news_source.py  run_backtest.py  run_backtest_newsapi.py  seed_ticker_lookup.py
src/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_budget_tracker.py  test_config.py  test_llm_client.py  test_pg_store.py  test_redis_store.py  test_security_fixes.py
(+165 files in other folders)
